examples/compiler_errors/header_counts/MixedBroken.flx
module MixedBroken {
    type MaybeInt = SomeInt(Int) | NoneInt
}
